--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "avataaars-grid-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
     "@dicebear/avatars": "^4.0.2",
     "@dicebear/avatars-avataaars-sprites": "^4.0.2",
+    "@google-cloud/functions-framework": "^1.4.0",
     "convert-svg-to-png": "^0.5.0",
-    "express": "^4.17.1",
     "sharp": "^0.24.1",
     "tinycolor2": "^1.4.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "functions-framework --target=avatars"
   },
   "author": "",
   "license": "MIT"
