--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "avataaars-grid-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
     "@dicebear/avatars": "^4.0.2",
     "@dicebear/avatars-avataaars-sprites": "^4.0.2",
+    "@google-cloud/functions-framework": "^1.4.0",
     "convert-svg-to-png": "^0.5.0",
     "express": "^4.17.1",
     "sharp": "^0.24.1",
@@ -13,7 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "start": "functions-framework --target=avataaarsAPI --port=3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
